--- a/index.html
+++ b/index.html
@@ -39,72 +39,63 @@
           <div class="card-body card-heading-body">
             <h1>Montego Bay</h1>
             <div class="date" id="date">Mon 3, July</div>
-            <span class="temp" id="temp">☀️ 91</span>
-            <span class="degree">
-              <a href="#" id="celsius">°C</a>
-            </span>
-
-            <div class="weather" id="weather">SUNNY</div>
-            <div class="humidity" id="humidity">Humidity 40%</div>
-            <div class="wind" id="wind">Wind 2%</div>
-            <div class="est_temp" id="est_temp">Feels like 102</div>
+            <div class="weather" id="weather">Sunny</div>
+            <div class="d-flex mb-3" id="col-temp">
+              <div class="me-auto p-2" id="col-cf">
+                <img src="" id="weather-icon" />
+                <span class="temp" id="temp"> 91</span>
+                <span class="degree">
+                  <a href="#" id="celsius">°C</a>
+                  <a href="#" id="fahrenheit">°F</a>
+                </span>
+              </div>
+              <div class="d-flex flex-column mb-3" id="col-pre">
+                <div class="humidity p-2" id="humidity">Humidity 40%</div>
+                <div class="wind p-2" id="wind">Wind 2%</div>
+                <div class="est_temp p-2" id="est_temp">Feels like 102</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-
       <div class="row">
         <div class="col-sm-2">
           <div class="card card-day">
             <div class="card-body card-day-body">
-              <h6>Tuesday</h6>
-              <p>
-                ☀️30°/23°<br />
-                💧1%
-              </p>
+              <h6>Tue</h6>
+              <p>☀️30°/23°<br /></p>
             </div>
           </div>
         </div>
         <div class="col-sm-2">
           <div class="card card-day">
             <div class="card-body card-day-body">
-              <h6>Wednesday</h6>
-              <p>
-                🌤️35°/23°<br />
-                💧17%
-              </p>
+              <h6>Wed</h6>
+              <p>🌤️35°/23°<br /></p>
             </div>
           </div>
         </div>
         <div class="col-sm-2">
           <div class="card card-day">
             <div class="card-body card-day-body">
-              <h6>Thursday</h6>
-              <p>
-                🌦️30°/25°<br />
-                💧40%
-              </p>
+              <h6>Thu</h6>
+              <p>🌦️30°/25°<br /></p>
             </div>
           </div>
         </div>
         <div class="col-sm-2">
           <div class="card card-day">
             <div class="card-body card-day-body">
-              <h6>Friday</h6>
-              <p>
-                🌦️25°/23°<br />
-                💧54%
-              </p>
+              <h6>Fri</h6>
+              <p>🌦️25°/23°<br /></p>
             </div>
           </div>
         </div>
         <div class="col-sm-2">
           <div class="card card-day">
             <div class="card-body card-day-body">
-              <h6>Saturday</h6>
-              <p>
-                🌥️33°/25°<br />
-                💧23%
-              </p>
+              <h6>Sat</h6>
+              <p>🌥️33°/25°<br /></p>
             </div>
           </div>
         </div>
