Updated layout and css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="" id="weather-icon" />
                 <span class="temp" id="temp"> 91</span>
                 <span class="degree">
-                  <a href="#" id="celsius">°C</a>
+                  <a href="#" id="celsius">°C</a> |
                   <a href="#" id="fahrenheit">°F</a>
                 </span>
               </div>
