Add weather icon

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               </div>
               <div class="d-flex flex-column mb-3" id="col-pre">
                 <div class="humidity p-2" id="humidity">Humidity 40%</div>
-                <div class="wind p-2" id="wind">Wind 2%</div>
-                <div class="est_temp p-2" id="est_temp">Feels like 102</div>
+                <div class="wind p-2" id="wind">Wind 2 m/s</div>
+                <div class="est_temp p-2" id="est_temp">Feels like 102°</div>
               </div>
             </div>
           </div>
