--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
           </div>
         </div>
       </div>
+      <a href="https://github.com/Saharah-Henry/project" target="_blank"
+        >Open-source code</a
+      >
+      ,by Saharah Henry
     </div>
     <script src="script.js"></script>
   </body>
