--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="row">
         <div class="col-sm-2">
           <div class="card card-day">
-            <div class="card-body card-day-body">
+            <div class="card-body card-day-body" id="day-one">
               <h6>Tue</h6>
               <p>☀️30°/23°<br /></p>
             </div>
