Remove "Current" button

--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
             <input type="search" placeholder="Enter city" id="search-bar" />
             <input type="submit" value="Search" id="button-submit" />
           </form>
-          <form id="current-tab">
-            <input type="submit" value="Current" id="button-current" />
-          </form>
         </div>
       </div>
       <br />
-
       <div class="heading">
         <div class="card card-heading">
           <div class="card-body card-heading-body">
@@ -102,8 +98,7 @@
       </div>
       <a href="https://github.com/Saharah-Henry/project" target="_blank"
         >Open-source code</a
-      >
-      ,by Saharah Henry
+      >, by Saharah Henry
     </div>
     <script src="script.js"></script>
   </body>
