Add weather forecast using SheCodes api

--- a/index.html
+++ b/index.html
@@ -54,52 +54,12 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-2">
-          <div class="card card-day">
-            <div class="card-body card-day-body" id="day-one">
-              <h6>Tue</h6>
-              <p>☀️30°/23°<br /></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="card card-day">
-            <div class="card-body card-day-body">
-              <h6>Wed</h6>
-              <p>🌤️35°/23°<br /></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="card card-day">
-            <div class="card-body card-day-body">
-              <h6>Thu</h6>
-              <p>🌦️30°/25°<br /></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="card card-day">
-            <div class="card-body card-day-body">
-              <h6>Fri</h6>
-              <p>🌦️25°/23°<br /></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="card card-day">
-            <div class="card-body card-day-body">
-              <h6>Sat</h6>
-              <p>🌥️33°/25°<br /></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a href="https://github.com/Saharah-Henry/project" target="_blank"
-        >Open-source code</a
-      >, by Saharah Henry
+
+      <div class="weather-forecast" id="forecast"></div>
     </div>
+    <a href="https://github.com/Saharah-Henry/project" target="_blank"
+      >Open-source code</a
+    >, by Saharah Henry
     <script src="script.js"></script>
   </body>
 </html>
