Remove degree conversion function

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               <button class="btn btn-outline-secondary" id="search-button">
                 <i class="fa-solid fa-magnifying-glass"></i>
               </button>
+
               <button class="btn btn-outline-secondary" id="location-button">
                 <i class="fa-solid fa-location-dot"></i>
               </button>
@@ -58,8 +59,7 @@
                 <img src="" id="weather-icon" />
                 <span class="temp" id="temp"> 91</span>
                 <span class="degree">
-                  <a href="#" id="celsius">°C</a> |
-                  <a href="#" id="fahrenheit">°F</a>
+                  <span>°C</span>
                 </span>
               </div>
               <div class="d-flex flex-column mb-3" id="col-temp-variable">
