Convert Celsius to Fahrenheit

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
               <div class="me-auto p-2" id="col-temp-degree">
                 <img src="" id="weather-icon" />
                 <span class="temp" id="temp"> 91</span>
-                <span class="degree">
-                  <span>°C</span>
-                </span>
+                <span class="degree" id="fahrenheit"> °F </span>
               </div>
               <div class="d-flex flex-column mb-3" id="col-temp-variable">
                 <div class="humidity p-2" id="humidity">Humidity 40%</div>
