--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="src/app.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -75,6 +75,6 @@
     <a href="https://github.com/Saharah-Henry/project" target="_blank"
       >Open-source code</a
     >, by Saharah Henry
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
