--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
       <div class="heading">
         <div class="card card-heading">
           <div class="card-body card-heading-body">
-            <h1>Montego Bay</h1>
-            <div class="date" id="date">Mon 3, July</div>
-            <div class="weather" id="weather">Sunny</div>
+            <h1></h1>
+            <div class="date" id="date"></div>
+            <div class="weather" id="weather">y</div>
             <div class="d-flex mb-3" id="col-temp">
               <div class="me-auto p-2" id="col-temp-degree">
                 <img src="" id="weather-icon" />
-                <span class="temp" id="temp"> 91</span>
-                <span class="degree" id="fahrenheit"> °F </span>
+                <span class="temp" id="temp"> </span>
+                <span class="degree" id="fahrenheit"> </span>
               </div>
               <div class="d-flex flex-column mb-3" id="col-temp-variable">
-                <div class="humidity p-2" id="humidity">Humidity 40%</div>
-                <div class="wind p-2" id="wind">Wind 2 m/s</div>
-                <div class="est_temp p-2" id="est_temp">Feels like 102°</div>
+                <div class="humidity p-2" id="humidity"></div>
+                <div class="wind p-2" id="wind"></div>
+                <div class="est_temp p-2" id="est_temp"></div>
               </div>
             </div>
           </div>
