--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="card-body card-heading-body">
             <h1></h1>
             <div class="date" id="date"></div>
-            <div class="weather" id="weather">y</div>
+            <div class="weather" id="weather"></div>
             <div class="d-flex mb-3" id="col-temp">
               <div class="me-auto p-2" id="col-temp-degree">
                 <img src="" id="weather-icon" />
