--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     ></script>
   </head>
   <body>
+    <img src="background 5.jpg" class="bg-img" />
     <div class="container">
       <div class="card card-form">
         <div class="card-body card-form-body">
@@ -51,7 +52,7 @@
       <div class="heading">
         <div class="card card-heading">
           <div class="card-body card-heading-body">
-            <h1></h1>
+            <h1>🤔</h1>
             <div class="date" id="date"></div>
             <div class="weather" id="weather"></div>
             <div class="d-flex mb-3" id="col-temp">
