--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
       <div class="heading">
         <div class="card card-heading">
           <div class="card-body card-heading-body">
-            <h1>🤔</h1>
-            <div class="date" id="date"></div>
+            <h1>🏙️</h1>
+            <div class="anim-typewriter">
+              <div class="date" id="date"></div>
+            </div>
             <div class="weather" id="weather"></div>
             <div class="d-flex mb-3" id="col-temp">
               <div class="me-auto p-2" id="col-temp-degree">
